# remaster

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  IDEAS.md  LICENSE  README.md  bench_scunet.py  bench_sdpa.py  compare.py  data  denoise_episode.py  denoise_pipeline.py  denoise_realesrgan.py  denoise_scunet.py  denoise_scunet_mid.py  docker-compose.yml  docker-entrypoint.sh  extract_clip.py  extract_mid_clip.py  fix_mp4.py  modal_runner.py  requirements.txt  run_depth.py  run_fuse_only.py  run_fused_sr.py  run_raft.py  run_realesrgan.py  run_warp_fuse_sr.py  test_esrgan.py
.claude/: settings.local.json
archive/: .dockerignore  Dockerfile  IDEAS.md
archive/checkpoint_eval/: train_val_aligned.json  training_data.json
archive/cloud/: modal_raft_extract.py  modal_raft_targets.py  modal_runner.py  modal_train_nerv.py
archive/experiments/: depth_maps.py  fuse_only.py  fused_sr.py  realesrgan_roundtrip.py  test_esrgan.py  warp_fuse_sr.py
archive/pipelines/: denoise_episode.py  denoise_gpu.py  denoise_gpu_v2.py  denoise_gpu_v3.py
archive/tools/: analyze_dino_features.py  blend_explorer.py  extract_clip.py  extract_hevc_pairs.py  extract_mid_clip.py  extract_vgg_features.py  raft_debug.py  train_nerv.py
bench/: bench_nafnet.py  bench_scunet.py  bench_sdpa.py  compare.py  compare_teachers.py  eval_checkpoints.py  sweep_architectures.py  sweep_plainnet.py  validate_int8_pipeline.py
bench/checkpoint_eval/: val_losses.json
bench/speed-opt/: EXPERIMENT.md  TRANSFER.md  research.md  results.tsv
cloud/: modal_aot_compile.py  modal_build_trt.py  modal_denoise.py  modal_export_onnx.py  modal_export_onnx_w32.py  modal_flashvsr.py  modal_generate_pairs.py  modal_profile.py  modal_train.py  modal_train_nerv.py  modal_train_plainnet.py  modal_uav_eval.py
cloud/uav_patches/: pipeline_upscale_a_video.py
docs/: CLEANUP.md  README.md  approaches.md  architecture.md  deployment.md  distillation-guide.md  experiments-log.md  gpu-profiling-guide.md  modal-graceful-shutdown.md  model-card-student.md  model-card-teacher.md  nafnet-speed-investigation.md  pruning-plan.md  quantization-aware-training.md  realtime-playback-research.md  setup.md  temporal-consistency-research.md  tensorrt-implementation.md  training-data-plan.md  training.md  zero-copy-gpu-pipeline.md
docs/archive/: approaches.md  architecture-investigation.md  architecture.md  detail-recovery-research.md  distillation-guide.md  fast-architecture-research.md  prd-vapoursynth-pipeline.md  pruning-plan.md  quantization-research.md  realtime-playback-research.md  tensorrt-implementation.md  vision.md
docs/research/: prd-recurrent-temporal.md  temporal-bottleneck-architecture.md
docs/research/cpp-pipeline/: prd.md
docs/research/hypir/: findings.md
docs/research/nerv-denoising/: autoresearch.md  findings.md  modal-scaling-plan.md  prd.md  research-log.md  status.md  two-phase-curriculum.md
docs/research/temporal-context/: prd.md  vision-backbone-candidates.md
docs/research/temporal-flow-targets/: approach.md
docs/research/training-data/: plan.md
docs/research/upscale-a-video/: evaluation.md  findings.md  prd.md
experiments/: flow_warp_fuse.py  raft_flow.py  realesrgan_roundtrip.py  realesrgan_upscale.py  scunet_frame.py  scunet_mid.py
lib/: convnext_autoencoder.py  ffmpeg_utils.py  metrics.py  nafnet_arch.py  paths.py  plainnet_arch.py
output/nerv/autorun/: results.tsv
pipeline_cpp/: CMakeLists.txt  README.md  async_writer.h  build.bat  color_kernels.cu  color_kernels.h  color_transfer.cu  color_transfer.h  main.cpp  mkv_muxer.h  simple_demuxer.h  sw_decoder.cpp  sw_decoder.h  trt_inference.cpp  trt_inference.h
pipeline_cpp/nvenc/: NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp
pipelines/: denoise_batch.py  denoise_episode.py  denoise_fast.py  denoise_local.py  denoise_nafnet.py  denoise_plainnet.py  remaster.py
playback/: README.md  enhance.vpy
remaster/: _bench_ort.vpy  _debug_paths.vpy  bench_docker.py  bench_pipeline.py  bench_trt.vpy  encode.py  encode.vpy  encode_nvencc.py  encode_nvencc.vpy  input.conf  mpv.conf  play.vpy  smoke_test.py
tests/: conftest.py  test_inference_quality.py
tools/: analyze_raft.py  build_engine.py  build_int8_calibration.py  build_int8_engine.py  build_training_data.py  calibrate_sigma.py  cleanup_data.py  compare_denoising.py  create_comparisons.py  create_val_split.py  download_training.py  export_onnx.py  extract_clip.py  extract_dino_features.py  extract_mid_clip.py  extract_random_frames.py  extract_synthetic_pairs.py  fix_mp4.py  hf_model_card.md  hypir_grid_test.py  label_sigma.py  make_comparisons.py  measure_sharpness.py  probe.py  raft_temporal_targets.py  setup_vs.py  stop_training.py  test_convnext_autoencoder.py  train_nerv.py  upload_to_hf.py  verify_arch_configs.py  verify_data.py  visualize_sharpness.py
training/: dataset.py  generate_pairs.py  losses.py  test_losses.py  train.py  train_nafnet.py  train_plainnet.py  viz.py
